# task

./: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json
neural_network/: .gitignore  README.md  pyproject.toml
neural_network/src/: main.py
prisma/: schema.prisma
src/consts/: index.ts  questions.ts
src/pages/: _app.tsx  _document.tsx  index.tsx
src/pages-flat/home/: index.tsx
src/pages-flat/home/ui/: Popup.tsx  ThemeCard.tsx
src/pages-flat/rec/: index.tsx  layout.tsx
src/pages-flat/recommendation/ui/: RecomendationCard.tsx
src/pages-flat/survey/: index.tsx
src/pages-flat/survey/ui/: survey-form.tsx
src/pages/home/: index.tsx  mockdata.ts
src/pages/home/components/: Popup.tsx  ThemeCard.tsx
src/pages/rec/: index.tsx  layout.tsx  mockdata.ts
src/pages/rec/components/: RecomendationCard.tsx
src/pages/recommendation/: index.tsx
src/pages/survey/: index.tsx
src/scripts/: genAntdCss.tsx
src/styles/: globals.css
src/theme/: index.tsx
