
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Aleksandr", email = "sanchasyo@mail.ru"},
]
dependencies = [
    "pandas>=2.0.1",
    "numpy>=1.24.3",
    "openpyxl>=3.1.2",
    "tensorflow>=2.11.1",
]
requires-python = ">=3.10,<3.11"
license = {text = "MIT"}

[tool.pdm.scripts]
start = { call = "src.main:main" }